# poorhouse-lane-v4

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  plan.md  setup.sh  user_manual.md
cmake/: git_version.cmake
docs/: USER_MANUAL.md
include/: ap_mode.h  audio_engine.h  chorus.h  delay.h  delay_digital.h  dsp_utils.h  filter.h  flanger.h  gpio_hw.h  led_driver.h  lfo.h  oscillator.h  phaser.h  reverb.h  reverb_hall.h  reverb_plate.h  reverb_schroeder.h  siren_log.h  tape_saturator.h  web_server.h
scripts/: deploy-to-persist.sh  ensure-persist.sh  update-service.sh
src/: ap_mode.cpp  audio_engine.cpp  chorus.cpp  delay.cpp  delay_digital.cpp  filter.cpp  flanger.cpp  gpio_hw.cpp  led_driver.cpp  lfo.cpp  main.cpp  oscillator.cpp  phaser.cpp  reverb.cpp  reverb_hall.cpp  reverb_plate.cpp  reverb_schroeder.cpp  web_server.cpp  web_ui.h
